# moderncpp

./: CMakeLists.txt
.github/workflows/: build.yml
Task1/: CMakeLists.txt
Task1/Part1/: CMakeLists.txt  main.cpp
Task1/Part2/: CMakeLists.txt  IpAddress.cpp  IpAddress.h  Split.cpp  Split.h  main.cpp
Task2/: CMakeLists.txt
Task2/Part1/: CMakeLists.txt  custom_tie.h  main.cpp
Task2/Part2/: CMakeLists.txt  custom_tie.h  custom_tuple.h  main.cpp  strip_ref.h
Task2/Question1/: CMakeLists.txt  main.cpp
Task2/Question2/: CMakeLists.txt  main.cpp
Task3/: CMakeLists.txt  MyAllocator.h  MyVector.h  main.cpp
